@@ -1,3 +1,9 @@
+Tue May  6 13:40:10 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * modules/WB26WorkspaceCreator.pm
+        * templates/wb26.mpd:
+          Also generate the referenced projects in the .project file
+
 Tue May  6 12:26:09 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/WB26WorkspaceCreator.pm:
